--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
 	height: 100vh;
 	width: 100%;
-	background-image: url(background.png);
+	background-image: url(background.jpg);
 	background-size: cover;
 	background-position: top;
 	position: relative;
